#2010 Reestructurar els mòduls per adequar-se a l’estàndard
- Correció d'errors al carregar beans